8336837: [lworld] Invalid monitor information in JVMState when buffering at return